fix: active link on safari browser

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -290,20 +290,16 @@ code {
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 12px;
-  /* line-height: 0.9 !important;
-  padding-top: 5px; */
 }
 
 .menu .menu__link {
   font-size: 15px;
   color: #7462A3;
   line-height: 0.9 !important;
-  padding-top: 5px;
 }
 
 .menu__link:not(.menu__link--active):hover {
     background-color: transparent;
-    /* padding-top: 5px; */
 }
 
 .menu .theme-doc-sidebar-menu .theme-doc-sidebar-item-category > .menu__list .menu__link {
@@ -510,7 +506,7 @@ code {
 .navbar__link--active:before {
 	content: '';
 	position: absolute;
-	top: -51%;
+	top: -52%;
 	left: 0;
 	width: 100%;
 	height: 70px;
